test3-2022-12-03.log
regress/test3.fir:166372:5: error: firrtl.constant attribute has wrong sign
    wire _tmp3120: UInt<15>
    ^
regress/test3.fir:166372:5: note: see current operation: %8 = "firrtl.constant"() {value = -12133 : si15} : () -> !firrtl.uint<15>
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 21.9424 seconds

  ----User Time----  ----Wall Time----  ----Name----
    3.7660 (  9.7%)    3.7660 ( 17.2%)  FIR Parser
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    0.0000 (  0.0%)    Parse OMIR
    2.9783 (  7.7%)    2.9783 ( 13.6%)    Parse modules
    0.7391 (  1.9%)    0.7391 (  3.4%)    Verify circuit
   34.9064 ( 89.8%)   17.9873 ( 82.0%)  'firrtl.circuit' Pipeline
    0.7319 (  1.9%)    0.7319 (  3.3%)    LowerFIRRTLAnnotations
    3.6692 (  9.4%)    2.0091 (  9.2%)    'firrtl.module' Pipeline
    1.1188 (  2.9%)    0.6184 (  2.8%)      DropName
    2.5504 (  6.6%)    1.3907 (  6.3%)      CSE
    0.0000 (  0.0%)    0.0000 (  0.0%)        (A) DominanceInfo
    0.0000 (  0.0%)    0.0000 (  0.0%)    InjectDUTHierarchy
    0.1363 (  0.4%)    0.0761 (  0.3%)    'firrtl.module' Pipeline
    0.1363 (  0.4%)    0.0761 (  0.3%)      LowerCHIRRTLPass
    0.2251 (  0.6%)    0.2251 (  1.0%)    InferWidths
    0.6971 (  1.8%)    0.6971 (  3.2%)    MemToRegOfVec
    1.1566 (  3.0%)    1.1566 (  5.3%)    InferResets
    0.1345 (  0.3%)    0.1345 (  0.6%)      (A) circt::firrtl::InstanceGraph
    0.1907 (  0.5%)    0.1907 (  0.9%)    WireDFT
    1.1577 (  3.0%)    0.6125 (  2.8%)    'firrtl.module' Pipeline
    1.1576 (  3.0%)    0.6125 (  2.8%)      FlattenMemory
    1.4850 (  3.8%)    1.4850 (  6.8%)    LowerFIRRTLTypes
    4.1457 ( 10.7%)    2.3060 ( 10.5%)    'firrtl.module' Pipeline
    3.1668 (  8.1%)    1.7350 (  7.9%)      ExpandWhens
    0.9789 (  2.5%)    0.5710 (  2.6%)      SFCCompat
    1.3675 (  3.5%)    1.3675 (  6.2%)    Inliner
    1.1562 (  3.0%)    0.6295 (  2.9%)    'firrtl.module' Pipeline
    1.1562 (  3.0%)    0.6295 (  2.9%)      RandomizeRegisterInit
    0.9809 (  2.5%)    0.9809 (  4.5%)    CheckCombCycles
    0.2018 (  0.5%)    0.2018 (  0.9%)      (A) circt::firrtl::InstanceGraph
    6.6539 ( 17.1%)    3.6406 ( 16.6%)    'firrtl.module' Pipeline
    6.3894 ( 16.4%)    3.5009 ( 16.0%)      Canonicalizer
    0.2645 (  0.7%)    0.1397 (  0.6%)      InferReadWrite
    0.1243 (  0.3%)    0.1243 (  0.6%)    PrefixModules
    0.0450 (  0.1%)    0.0450 (  0.2%)      (A) circt::firrtl::InstanceGraph
    0.0000 (  0.0%)    0.0000 (  0.0%)      (A) circt::firrtl::NLATable
    0.4745 (  1.2%)    0.4745 (  2.2%)    IMConstProp
    0.1891 (  0.5%)    0.1891 (  0.9%)  Rest
   38.8615 (100.0%)   21.9424 (100.0%)  Total

{
  totalTime: 21.984,
  maxMemory: 1062727680
}
